[package]
name = "leak-hunter"
version = "0.2.0"
edition = "2021"
description = "Cross-platform repository secret scanner"
license = "MIT"
repository = "https://github.com/doggy8088/leak-hunter"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
once_cell = "1"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
url = "2"

[dev-dependencies]
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.30.0"
ci = "github"
installers = ["shell", "powershell", "npm"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-15"
x86_64-apple-darwin = "macos-15-intel"
